# subtitleTranslator

./: AGENTS.md  README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  video.rs
crates/core/src/srt/: mod.rs
crates/core/src/translate/: mod.rs  openai.rs
crates/core/src/translate/prompts/: glossary_system.prompt  translate_system.prompt  translate_user.prompt
tasks/: 0001-extract.md  0002-mp4-multiple-eng-subs.md  0003-translate.md  0004-debug-temp.md  0005-clear-logs.md  0006-progress-resume.md  0007-batch-estimate.md  0008-eta-glossary.md  0009-batch-config-timeout.md  0010-srt-input.md  0011-index-json.md  0012-isolate-prompts.md  0013-json-request.md  0014-double-openai-timeout.md  0015-async-translation.md  0016-central-consumer.md  0017-retry-failed-lines.md  0018-requeue-untranslated.md  0019-limit-concurrency.md
